--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.0.10"
+  },
+  "dependencies": {
+    "@cucumber/cucumber": "^12.2.0"
   }
 }
